// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Media/VideoPlayer Auto Play 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
  cursor: pointer;
}

.c2 {
  width: 100%;
}

@media screen and (max-width:767px) {
  .c2 {
    width: auto;
    height: 100%;
  }
}

<div
  style={
    Object {
      "maxWidth": 500,
    }
  }
>
  <div
    className="c0"
    data-testid="video-player"
  >
    <div
      className="c1"
      data-testid="pause-action"
      onClick={[Function]}
    />
    <video
      autoPlay={true}
      className="c2"
      controls={false}
      loop={true}
      onPause={[Function]}
      onPlaying={[Function]}
      playsInline={true}
    >
      <source
        src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4"
        type="video/mp4"
      />
      Your browser does not support HTML video.
    </video>
    <div
      className="c3"
    />
  </div>
</div>
`;

exports[`Storyshots Media/VideoPlayer Default 1`] = `
.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 30px;
  width: 30px;
  -webkit-flex: 0 0 30px;
  -ms-flex: 0 0 30px;
  flex: 0 0 30px;
  color: #FFF;
}

.c6 > svg {
  height: 100%;
  width: 100%;
  color: white;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 3px solid #FFF;
  border-radius: 50px;
  background-color: #6D6E70;
  box-shadow: unset;
  cursor: pointer;
  overflow: hidden;
  padding: 10px;
  width: 80px;
  height: 80px;
}

.c5 {
  height: 100%;
  width: 100%;
  border: 3px solid #FFF;
  opacity: 0.4;
  border-radius: 50px;
  z-index: 1;
  position: absolute;
}

.c7 {
  margin-left: 7px;
}

.c0 {
  position: relative;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
  cursor: pointer;
  display: none;
}

.c2 {
  width: 100%;
}

@media screen and (max-width:767px) {
  .c2 {
    width: auto;
    height: 100%;
  }
}

<div
  style={
    Object {
      "maxWidth": 500,
    }
  }
>
  <div
    className="c0"
    data-testid="video-player"
  >
    <div
      className="c1"
      data-testid="pause-action"
      onClick={[Function]}
    />
    <video
      autoPlay={false}
      className="c2"
      controls={false}
      loop={true}
      onPause={[Function]}
      onPlaying={[Function]}
      playsInline={true}
    >
      <source
        src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4"
        type="video/mp4"
      />
      Your browser does not support HTML video.
    </video>
    <div
      className="c3"
    >
      <div
        className="c4"
        data-projection-id={13}
        data-testid="play-button"
        onClick={[Function]}
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <div
          className="c5"
        />
        <span
          className="c6 c7"
          color="white"
          size="30px"
        >
          <svg
            viewBox="0 0 50 50"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12.267 48.996 25.929-23.597L12.266.379v48.617Z"
              fill="currentColor"
              fillRule="evenodd"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth={2}
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
